--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,8 +3,9 @@ name: buildUptime Kuma
 on:
   push:
     branches:
-      - main  # This will trigger the workflow on updates to the main branch
-
+      - main  
+  workflow_dispatch:
+ 
 jobs:
   build:
     runs-on: ubuntu-latest
