--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,6 +18,7 @@ jobs:
         run: |
           echo "Building the project..."
           # Here you can add your actual build commands, e.g. npm install, npm run build, etc.
+          
 
   deploy:
     runs-on: ubuntu-latest
@@ -30,6 +31,10 @@ jobs:
       - name: Pull latest Uptime Kuma image
         run: |
           docker pull louislam/uptime-kuma:latest  # Pull the latest image from Docker Hub
+      - name: Debug SSH Connection
+        run: |
+         echo "${{ secrets.EC2_SSH_KEY }}" | tr -d '\r' > private_key && chmod 600 private_key
+         ssh -o StrictHostKeyChecking=no -i private_key ubuntu@<EC2_PUBLIC_IP> 'echo "SSH connection successful"'
 
       - name: Stop current Uptime Kuma container
         run: |
